package seedu.address.model.student;

/**
 * Stub for Class class
 */
public class TempClass {
}
